--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
       uses: cryptodeal/wails-bun-build-action@v0.0.3
     
     - name: Build
-      run: wails build --platform darwin
+      run: wails build --platform darwin -o EasyHost
 
     - name: Test
       run: go test -v ./...
