--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,8 +29,6 @@ jobs:
       with:
         # Can be "npm", "yarn", "pnpm" or "auto". "auto" will determine the package manager by looking into the repo's files. This is very accurate, so you normally don't want to change this.
         packageManager: "npm"
-    
-        
     - name: Wails Build Action
       # You may pin to the exact commit or the version.
       # uses: dAppServer/wails-build-action@ea084a9005380833a7ae035ad0ba046e03073273
@@ -41,3 +39,7 @@ jobs:
         # Wails version to use
         # Webview2 installer method [download,embed,browser,error]
         go-version: 1.18
+    - name: Create release on GitHub
+      uses: docker://goreleaser/goreleaser:latest
+      with:
+        args: release
