--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,15 +29,12 @@ jobs:
       with:
         # Can be "npm", "yarn", "pnpm" or "auto". "auto" will determine the package manager by looking into the repo's files. This is very accurate, so you normally don't want to change this.
         packageManager: "npm"
-    - name: Wails Build Action
-      # You may pin to the exact commit or the version.
-      # uses: dAppServer/wails-build-action@ea084a9005380833a7ae035ad0ba046e03073273
-      uses: dAppServer/wails-build-action@v1
+    - name: Upload File
+      # 使用预制action：上传文件，可以将执行路径打包成zip上传
+      uses: actions/upload-artifact@v2
       with:
-        build-platform: darwin/universal
-        wails-version: "v2.2.0"
-        # Wails version to use
-        # Webview2 installer method [download,embed,browser,error]
-        go-version: 1.18
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v3.0.2
+        # 上传后文件的名称
+        name: mac
+        # 打包的路径以及文件过滤，此为仅打包dist目录下的dmg文件
+        path: out/make/zip/darwin/x64/*.zip
+
