--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,10 @@ jobs:
       with:
         # Can be "npm", "yarn", "pnpm" or "auto". "auto" will determine the package manager by looking into the repo's files. This is very accurate, so you normally don't want to change this.
         packageManager: "npm"
+    - name: Wails Build Action
+      # You may pin to the exact commit or the version.
+      # uses: dAppServer/wails-build-action@ea084a9005380833a7ae035ad0ba046e03073273
+      uses: dAppServer/wails-build-action@v1
     - name: Upload File
       # 使用预制action：上传文件，可以将执行路径打包成zip上传
       uses: actions/upload-artifact@v2
